--- a/style.css
+++ b/style.css
@@ -45,10 +45,11 @@ p,.woocommerce-Address address {
 	box-shadow: none;
 }
 .text-uppercase,.page-header,.woocommerce ul.products li.product .button,.woocommerce input.button,.woocommerce-cart .cart-collaterals .cart_totals tr th,.woocommerce-cart .wc-proceed-to-checkout a.checkout-button,.woocommerce .cart th,.woocommerce table.shop_table th{
-	text-transform: uppercase;
+	text-transform: capitalize;
 }
 .page-header{
-	margin:0 0 20px;
+	margin: 0 0 40px;
+	border: 0;
 }
 .margin-null,.header-social,.header-info,.woocommerce .products ul, .woocommerce ul.products,.footer-social,.newsletter h3,.woocommerce div.product .woocommerce-tabs .panel,.woocommerce div.product div.images, .woocommerce div.product div.summary,.woocommerce .woocommerce-breadcrumb,.woocommerce ul.products li.product .button{
 	margin: 0;
@@ -83,7 +84,7 @@ p,.woocommerce-Address address {
 .padding-null{
 	padding: 0;
 }
-.padding-gap-1,.parallax,.footer{
+.padding-gap-1,.parallax{
 	padding-top: 90px;
 }
 .padding-gap-2,.up-sells,.related,.woocommerce-tabs,.woocommerce div.product div.images, .woocommerce div.product div.summary{
@@ -104,7 +105,7 @@ p,.woocommerce-Address address {
 .padding-top-10 {
 	padding-top: 10px;
 }
-.padding-bottom-10,.footer-top{
+.padding-bottom-10{
 	padding-bottom: 10px;
 }
 .margin-top-10{
@@ -187,19 +188,10 @@ p,.woocommerce-Address address {
 	left: 0;
 }
 .sticky .logo{
-	max-width: 111px;
+	display: none;
 }
 .sticky .primary-menu ul li a {
 	padding: 14px 17px;
-}
-.header-top:after{
-	position: absolute;
-	right: 0;
-	width: 60px;
-	background: #00e06d;
-	height: 100%;
-	top: 0;
-	content: '';
 }
 .request-account{
 	margin-bottom: 0;
@@ -262,32 +254,13 @@ p,.woocommerce-Address address {
 	top: 0;
 	left: 100%;
 }
-.carousel-fade .carousel-inner .item {
-	opacity: 0;
-	-webkit-transition-property: opacity;
-	-moz-transition-property: opacity;
-	-o-transition-property: opacity;
-	transition-property: opacity;
-}
-.carousel-fade .carousel-inner .active {
-	opacity: 1;
-}
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-	left: 0;
-	opacity: 0;
-	z-index: 1;
-}
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
-	opacity: 1;
-}
-.carousel-fade .carousel-control {
-	z-index: 2;
-}
 /********************************************************
     ## Home
 ********************************************************/
+.editor-details ol li{
+	line-height: 29px;
+	padding-bottom: 15px;
+}
 .we-are-an-agency{
 	padding: 150px 90px 90px;
 }
@@ -529,7 +502,6 @@ div.wpcf7-mail-sent-ok {
 	margin-top: 23px;
 }
 .inner-contact-info a{
-
 }
 .wpcf7-form-control-wrap{
 	margin-top: 5px;
@@ -545,133 +517,12 @@ div.wpcf7-mail-sent-ok {
 	font-size: 18px;
 }
 /********************************************************
-    ## Blog
-********************************************************/
-.widget-area ul{
-	padding: 0;
-	list-style: none;
-}
-.widget-area ul li{
-	padding-bottom: 10px;
-}
-.widget-area ul li:last-child{
-	padding-bottom: 0;
-}
-.widget-area section{
-	background: #f9f9f9;
-	padding: 15px;
-	margin-bottom: 30px;
-}
-.widget-area section .widget-title{
-	border-bottom: 1px solid #ddd;
-	padding-bottom: 10px;
-	margin-bottom: 20px;
-}
-.widget-area .search-form .search-field{
-	border-radius:0 ;
-	display: block;
-	height: 34px;
-	padding: 6px 12px;
-	font-size: 14px;
-	line-height: 1.42857143;
-	color: #555;
-	background-color: #fff;
-	background-image: none;
-	border: 1px solid #ccc;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-}
-.widget-area .search-form .search-submit{
-	display: inline-block;
-	padding: 6px 12px;
-	margin-bottom: 0;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 1.42857143;
-	text-align: center;
-	white-space: nowrap;
-	vertical-align: middle;
-	-ms-touch-action: manipulation;
-	touch-action: manipulation;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	background-image: none;
-	border: 1px solid transparent;
-}
-.widget-area .search-form .screen-reader-text{
-	display: none;
-}
-.entry-meta {
-	font-size: 12px;
-}
-.byline{
-	padding: 0 8px;
-}
-.posts-navigation{
-	text-align: center;
-}
-.posts-navigation a{
-	border: 1px solid;
-	padding: 10px 35px;
-	display: inline-block;
-	margin-top: 20px;
-}
-/********************************************************
-    ## Article
-********************************************************/
-.comments img{
-	max-width: 100%;
-	border-radius: 50%;
-	margin-right: 10px;
-}
-.comment-content,.comment-metadata,.comment-awaiting-moderation{
-	margin-left: 105px;
-}
-.comment-metadata{
-	margin-left: 105px;
-	margin-top: -34px;
-	margin-bottom: 20px;
-}
-.comments .fn{
-	font-size: 16px;
-	font-weight: normal;
-}
-.reply{
-	text-align: right;
-}
-/********************************************************
     ## Footer
 ********************************************************/
 .footer-top{
-	padding: 90px 0 80px;
-}
-footer .info-details .fa{
-	margin-right: 5px;
-}
-.footer-top h4{
-	margin-bottom: 45px;
-	font-size: 24px;
-}
-.newsletter .btn{
-	position: absolute;
-	right: 8px;
-	top: 8px;
-}
-.newsletter .form-control{
-	background: transparent;
-	border-color: #111;
-	height: inherit;
-	padding: 15px 20px;
-	color: #fff;
+	padding: 45px 0 30px;
 }
 .info-details p {
-	margin-bottom: 22px;
 	font-size: 20px;
 }
 /********************************************************
@@ -718,89 +569,29 @@ footer .info-details .fa{
 }
 .type-wrap{
 	position: absolute;
-	top: 17%;
+	top: 35%;
 	width: 100%;
 	z-index: 1;
 }
 .type-inner{
-	max-width: 830px;
+	max-width: 1000px;
 	margin: 0 auto;
 	text-align: left;
 }
 .type-inner h1{
 	line-height: 1.6;
-	font-size: 55px;
-	font-weight: normal;
+	font-size: 40px;
+	color: #000;
 }
 .fix-type{
 	text-transform: capitalize;
 	line-height: 1.8;
-	background: rgba(255, 255, 255, .7);
-	padding: 5px 25px;
+	padding: 5px 25px  5px 0;
 }
-.type-1{
-
-}
-.type-2{
-	background: #ffb900;
-	color: #fff;
-}
-.type-3{
-	background: #00e06d;
-	color: #fff;
-}
-.type-4{
-	background: #ffd640;
-	color: #fff;
+.type-heading{
+	border-bottom: 2px solid #000;
 }
 .typed-cursor{
-	font-size: 75px;
-	font-weight: normal;
-	color: #00e06d;
-}
-.request-a-quote{
-	background: url("assets/images/quote.jpg") no-repeat;
-}
-.request-a-quote .modal-content{
-	overflow: hidden;
-	background: none;
-	border: 0;
-	box-shadow: none;
-}
-.request-a-quote .form-control{
-	background: transparent;
-	border-color: #00e06d;
-	min-height: 46px;
-	height: inherit;
-}
-.request-a-quote div.wpcf7-validation-errors{
-	overflow: hidden;
-	width: 100%;
-}
-.request-a-quote  .wpcf7-form-control-wrap{
-	position: relative;
-}
-.request-a-quote span.wpcf7-not-valid-tip{
-	position: absolute;
-	top: 12px;
-	right: 15px;
-}
-.request-a-quote button.close:hover{
-	border-color: #000;
-	background: #000;
-}
-.request-a-quote h1{
-	margin-top: 0;
-}
-.request-a-quote button.close{
-	position: absolute;
-	right: 60px;
-	top: 15px;
-	padding: 10px 15px;
-	border: 1px solid #00e06d;
-	color: #fff;
-	opacity: 1;
-	background: #00e06d;
-	text-shadow: none;
-	z-index: 10;
+	font-size: 40px;
+	color: #000;
 }
